2004-01-12  Junichi Uekawa  <dancer@debian.org>

	* testsuite/run-test.sh: update estimate time.

2004-01-11  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-checkparams (IGNORE_UMOUNT): logging

	* debian/copyright (Copyright): update copyright info.

	* pbuilder: update copyright info

	* pbuilder-modules: update copyright info.

	* testsuite/run-test.sh: change to pbuilder test, instead of UML.

	* testsuite/run-test-uml.sh: split out UML test

	* README: tried updating the documentation.

	* Documentation/pbuilder-doc.css: Change css so that it's black on white, not white on black.

2004-01-10  Junichi Uekawa  <dancer@debian.org>

	* examples/B91dpkg-i: fix typo to properly obtain the list of packages

2004-01-06  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: Notes on debootstrap failures.

	* pbuilder.8: add a note so that people won't mistake pbuilder will use --extrapackage for 
	creating the bootstrap script.

2003-12-31  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: updated doc so that user-mode-linux is 
	no longer in the experimental section of the documentation.
	A new faq entry on 'pbuilder is slow', to recomment using pbuilder-uml when 
	the user thinks tar is slow.

2003-12-30  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml (EXTRAPACKAGES): Document apt-proxy is usable as a proxy.

2003-12-29  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: update docs on --use-pdebuild-internal

2003-12-27  Junichi Uekawa  <dancer@debian.org>

	* testsuite/run-test.sh (PBUILDER_UML): fix rm testbuild2.
	Estimate is 45 minutes now. It takes longer.

	* Makefile (clean): clean testsuite/testbuild2 directory also.

	* pdebuild-internal: use dpkg-buildpackage inside the chroot rather than debuild.

2003-12-26  Junichi Uekawa  <dancer@debian.org>

	* examples/execute_installtest.sh: add CVS id output

2003-12-24  Junichi Uekawa  <dancer@debian.org>
