@@ -1,5 +1,9 @@
 2004-01-12  Junichi Uekawa  <dancer@debian.org>
 
+	* testsuite/run-test.sh (IOSTATPID): create normal/ dir for plain pbuilder logs.
+
+	* testsuite/run-test-uml.sh (PBUILDER_UML): create uml/ dir for uml logs.
+
 	* testsuite/run-test.sh: update estimate time.
 
 2004-01-11  Junichi Uekawa  <dancer@debian.org>
